crates/pandalang/src/snapshots/pandalang__eval__tests__evals@app__add.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/add.panda
---
Ok(
    Int(
        Int {
            n: 5,
        },
    ),
)
