crates/pandalang/src/snapshots/pandalang__eval__tests__evals@app__add_one.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/app/add_one.panda
---
Int(
    Int {
        n: 4,
    },
)
