crates/pandalang/src/snapshots/pandalang__eval__tests__evals@app__id.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/id.panda
---
Ok(
    Int(
        Int {
            n: 3,
        },
    ),
)
